--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nobis doloribus odit temporibus, nemo harum
+        consequatur autem voluptatem blanditiis accusamus dolorum dignissimos, doloremque expedita, magni eveniet
+        aliquid facere. Quod, quae?</p>
 </body>
+
 </html>
