add the image on a site

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nobis doloribus odit temporibus, nemo harum
         consequatur autem voluptatem blanditiis accusamus dolorum dignissimos, doloremque expedita, magni eveniet
         aliquid facere. Quod, quae?</p>
+    <img src="images/food.jpg" title="image" alt="EROR404" width="500px" height="500px">
 </body>
 
 </html>
